# NanoSolana-tamaGOchi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SOUL.md  go.mod  go.sum  hardware.go  install.sh  main.go  package.json  program.md  start.sh  strategy.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_strategy.md
SeekerClaw-main/: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICES  PROJECT.md  README.md  SECURITY.md  SKILL-FORMAT.md  build.gradle.kts  settings.gradle.kts
SeekerClaw-main/.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
SeekerClaw-main/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
apps/android/: README.md  (+2 more)
chrome-extension/: background.js  manifest.json  popup.css  popup.html  popup.js
clawgo-main/: README.md  go.mod
docs/: HARDWARE.md  index.html
docs-site/: guide.css  guide.html  index.html  main.js  package-lock.json  package.json  style.css
nano-core/: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json
nano-docs/: index.md
nanohub/: .env.deploy.example  .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  VISION.md  package.json  tsconfig.oxlint.json  vercel.json  vitest.config.ts
scripts/: build-seeker.sh  gateway-spawn.sh  launch.mjs  menubar.sh  package-lock.json  package-macos.sh  package.json
site/: index.html
ui/: index.html  package.json  vite.config.ts
web/: Makefile
(+1459 files in other folders)
